css/dest/wcasia-2020.css
/* ... */
/* ORGANIZER
---------------------------------------*/
h3.org-group {
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -ms-flex-pack: center;
      justify-content: center;
  -ms-flex-align: center;
      align-items: center;
  text-align: center;
  color: #E63331;
  font-size: 1.563em;
  margin-bottom: 2.5rem; }
  h3.org-group:before, h3.org-group:after {
    content: '';
    border-top: 1px dotted #E63331;
    margin: 0 1.5rem 0 0;
    -ms-flex: 1 0 1.5rem;
        flex: 1 0 1.5rem; }
  h3.org-group:after {
    margin: 0 0 0 1.5rem; }

.wcorg-organizer h2 {
  color: #104b8c;
  font-size: 1.25em; }

.wcorg-organizer-description .avatar {
  float: left;
  margin: 0 20px 20px 0; }

.org-team-leads--local .wordcamp-organizers__title:after,
.org-team-leads--global .wordcamp-organizers__title:after {
  font-size: 0.7em;
  font-weight: 400; }

.org-team-leads--local .wordcamp-organizers__title:after {
  content: '— Local lead'; }

.org-team-leads--global .wordcamp-organizers__title:after {
  content: '— Global lead'; }

/* ATTENDEES
---------------------------------------*/
.tix-attendee-list {
  list-style: none;
  margin: 0;
  padding: 0; }

#tix-attendees .tix-columns-3 li {
  width: 100%; }

@media (min-width: 37.5em) {
  #tix-attendees .tix-columns-3 li {
    width: 50%; }
  #tix-attendees .tix-columns-3 li:nth-child(odd) {
    clear: left; } }

@media (min-width: 62em) {
  #tix-attendees .tix-columns-3 li {
    width: 33.33333%; }
  #tix-attendees .tix-columns-3 li:nth-child(odd) {
    clear: none; }
  #tix-attendees .tix-columns-3 li:nth-child(3n+1) {
    clear: left; } }

#tix-attendees:after, #tix-attendees:before {
  content: "";
  display: table; }

#tix-attendees:after {
  clear: both; }

#tix-attendees li {
  position: relative;
  margin-top: 0;
  margin-bottom: 2.5rem;
  height: auto;
  min-height: 3rem;
  padding-left: 4rem;
  padding-right: .5rem;
  font-size: .8em;
  line-height: 1.25em;
  text-align: left; }

#tix-attendees .avatar {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 100;
  margin: 0;
  width: 3rem;
  height: 3rem;
  background-color: #fff;
  transition: all .15s ease; }

#tix-attendees a {
  display: block; }

#tix-attendees .tix-field {
  display: block;
  margin: 0;
  margin-right: .5rem;
  font-size: 14px;
  line-height: 1.5625em;
  vertical-align: middle; }

#tix-attendees .tix-attendee-name {
  display: block;
  padding-right: 0;
  margin-right: 0;
  margin-bottom: .125rem;
  color: #104b8c;
  font-weight: 500;
  font-size: 18px;
  line-height: 1.25em;
  background: none; }

#tix-attendees li:hover .avatar {
  transform: scale(1.1); }

#tix-attendees .tix-attendee-url {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 11.25rem; }

#tix-attendees .tix-attendee-twitter:after {
  display: inline-block;
  width: .875rem;
  height: .875rem;
  margin-left: .5rem;
  vertical-align: middle;
  opacity: .5;
  content: ""; }

#tix-attendees .tix-attendee-twitter:last-child:after {
  display: none; }

/* SPONSORS
---------------------------------------*/
.wcb_widget_sponsors {
  text-align: center; }
  .wcb_widget_sponsors h2 {
    font-size: 1.25em;
    margin-bottom: 2rem; }
  .wcb_widget_sponsors .sponsor-logo {
    display: inline-block !important;
    margin: 0 auto;
    padding-bottom: 0; }
    .wcb_widget_sponsors .sponsor-logo img {
      margin-bottom: 0; }

.sponsor-slot {
  border: 4px solid #e63331;
  padding: 15px;
  display: inline-block;
  color: #e63331; }

.sponsor-level {
  margin-bottom: 1.5rem; }
  .sponsor-level .sponsor-level-title {
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    -ms-flex-pack: center;
        justify-content: center;
    -ms-flex-align: center;
        align-items: center;
    text-align: center;
    color: #0D5ABC;
    font-size: 1.25em;
    margin-bottom: 1.5rem; }
    .sponsor-level .sponsor-level-title:before, .sponsor-level .sponsor-level-title:after {
      content: '';
      border-top: 1px dotted #F5F1E8;
      margin: 0 1.5rem 0 0;
      -ms-flex: 1 0 1.5rem;
          flex: 1 0 1.5rem; }
    .sponsor-level .sponsor-level-title:after {
      margin: 0 0 0 1.5rem; }
  .sponsor-level.venue img {
    max-height: 220px !important; }
  .sponsor-level.gold img {
    max-height: 200px !important; }
  .sponsor-level.silver img {
    max-height: 170px !important; }
  .sponsor-level.bronze img {
    max-height: 130px !important; }
  .sponsor-level.in-kind img {
    max-height: 100px !important; }

.wcorg-sponsor {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -ms-flex-pack: center;
      justify-content: center;
  margin-bottom: 1.5rem;
  padding: 1.5rem;
  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1); }
  .wcorg-sponsor h3 {
    display: none; }
  .wcorg-sponsor img {
    margin: 0 auto; }
  .wcorg-sponsor .wp-block-image {
    display: none; }

.wcorg-sponsor-description img {
  max-width: 100%;
  margin-bottom: 1.5rem; }

.wcorg-sponsor-level-venue img {
  max-height: 220px !important; }

.wcorg-sponsor-level-gold img {
  max-height: 200px !important; }

.wcorg-sponsor-level-silver img {
  max-height: 170px !important; }

.wcorg-sponsor-level-bronze img {
  max-height: 130px !important; }

.wcorg-sponsor-level-in-kind img {
  max-height: 100px !important; }

.wcorg-sponsor-level-venue h2, .wcorg-sponsor-level-gold h2, .wcorg-sponsor-level-silver h2, .wcorg-sponsor-level-bronze h2, .wcorg-sponsor-level-in-kind h2 {
  display: -ms-flexbox;
  display: flex;
  width: calc(100% + 3rem);
  -ms-flex-pack: center;
      justify-content: center;
  -ms-flex-align: center;
      align-items: center;
  text-align: center;
  color: #0D5ABC;
  font-size: 1.563em;
  margin-left: -1.5rem;
  margin-right: -1.5rem;
  margin-top: 2.5rem;
  margin-bottom: 1.5rem; }
/* ... */

